# QtFaceAuth

./: .gitignore  CMakeLists.txt  README.md  manage.bat  manage.py  mkdocs.yml
docs/: architecture.md  database.md  index.md  installation.md  security.md  technical_specs.md  testing_plan.md  ui_design.md  user_guide.md
docs/prototypes/: dashboard.html  demo.html  desktop_light_main.html  hmi_dark_main.html  hmi_horizontal_dark.html  hmi_horizontal_light.html  hmi_vertical_dark.html  hmi_vertical_light.html  master.html  menu_logs.html  menu_settings.html  menu_users.html  specs.html  state_boot.html  state_brand.html  state_challenge.html  state_feedback.html  state_idle.html  state_spoof.html  state_success.html
docs/ui_design/: horizontal.md  index.md  specs.md  submenus.md  vertical.md
scripts/: db_common.py  delete_db.py  init_db.py  reset_db.py  schema.sql
src/: main.cpp
src/auth/: UserManager.cpp  UserManager.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/engine/: FaceEngine.cpp  FaceEngine.h
ui/: main.qml
ui/views/: DashboardView.qml  EnrollmentView.qml  LoginView.qml  UsersView.qml
